--- a/2018-05-23-Meeting.md
+++ b/2018-05-23-Meeting.md
@@ -1,13 +1,3 @@
-# Present
-Karin Lagesen
-Øivind Øines
-Arne Holst Jensen
-Girum Tadesse Tessema
-Hege Divon
-Thomas Haverkamp
-Maria Dahle
-Håkon Kaspersen
-
 # Agenda
 
 ## Communications
@@ -18,7 +8,6 @@ In case of questions, send email to the abelgroup email list.
 
 ## Information files
 Several directories have read-me files, read them!
-- If there is a readme file in a directory, read it!
 - The readme file describes catalogue structures, what is supposed to be inside the catalogue in question, etc.
 
 Also: new feature: NEWS file
@@ -31,8 +20,7 @@ Also: new feature: NEWS file
 1. Directories
   * "Landing directory", like "/usit/abel/u1/karinlag" are free for your use, but no VI data should be kept there
   * All should have their own project home directory, this would be "/work/projects/nn9305k/home/karinlag".
-    - All Veterinary Institute data should only be in the nn9305k project catalogue. We have a total of 20 TB of space available in that 
-catalogue.
+    - All Veterinary Institute data should only be in the nn9305k project catalogue.
     - Your "landing directory" have about 500 GB of space available.
     - The project catalogue is not accessible unless your user have been given access to it, and read/write/execute permissions is given 
 along with this this access. If you don't have access or need access for another user, send an email to the abel email group. Karin will 
